ブランチテスト

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <div class="nav-right">
                      <ul class="list-group list-group-horizontal">
                     <a href="#"><img class="fb_logo" src="images/facebook_icon.png" alt="facebook"></a>
-                    <div class="contact_text DivLink" >お問い合わせ
+                    <div class="contact_text DivLink" >お問い合わせでっす
                     <a class ="Link" href="#"></a></div>
                     </ul>
                   </div>
