メニューバーとfooterのレスポンシブ調整

--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
     <body>
         <header class="wrapper_itaru">
             <nav class="navbar navbar-expand navbar-light bg-light">
-              <div class="container-fluid navbar_back">
-                <a class="navbar-brand" href="#"><img class="logo" src="images/logo.png" alt="logo"></a>
-                    <div class="nav-right">
+              <div class="container-fluid navbar_back_itaru">
+                <a class="navbar-brand" href="#"><img class="logo_itaru" src="images/logo.png" alt="logo"></a>
+                    <div class="nav-right_itaru">
                      <ul class="list-group list-group-horizontal">
-                        <a href="#"><img class="fb_logo" src="images/facebook_icon.png" alt="facebook"></a>
-                        <div class="contact_text DivLink" >お問い合わせ
-                        <a class ="Link" href="#"></a></div>
+                        <a href="#"><img class="fb_logo_itaru" src="images/facebook_icon.png" alt="facebook"></a>
+                        <div class="contact_text_itaru DivLink_itaru" >お問い合わせ
+                        <a class ="Link_itaru" href="#"></a></div>
                     </ul>
                   </div>
               </div>
@@ -36,23 +36,23 @@
                 <div class="carousel-item active" data-bs-interval="5000">
                   <img src="images/top1.bmp" class="d-block w-100" alt="top1.bmp">
                     <div class="carousel-caption">
-                      <div class="main_title_div">
-                        <h1 class="main_title_1">HAGAKURE</h1>
+                      <div class="main_title_div_itaru">
+                        <h1 class="main_title_1_itaru">HAGAKURE</h1>
                       </div>
-                      <h2 class="main_title_2">プログラミング塾</h2>
-                      <div class="main_title_daiya_block">
-                          <img src="images/daiya.png" class="left_daiya" alt="daiya.png">
-                          <div class="main_title_border"></div>
-                          <img src="images/daiya.png" class="right_daiya" alt="daiya.png">
+                      <h2 class="main_title_2_itaru">プログラミング塾</h2>
+                      <div class="main_title_daiya_block_itaru">
+                          <img src="images/daiya.png" class="left_daiya_itaru" alt="daiya.png">
+                          <div class="main_title_border_itaru"></div>
+                          <img src="images/daiya.png" class="right_daiya_itaru" alt="daiya.png">
                       </div>
-                      <div class="main_title_p_block">
-                          <p class="main_title_p1">鍋島武士×プログラミング</p>
-                          <p class="main_title_p2">同志よ、共に学ぶでござる</p>
+                      <div class="main_title_p_block_itaru">
+                          <p class="main_title_p1_itaru">鍋島武士×プログラミング</p>
+                          <p class="main_title_p2_itaru">同志よ、共に学ぶでござる</p>
                       </div>
-                      <div class="main_title_daiya_block">
-                          <img src="images/daiya.png" class="left_daiya" alt="daiya.png">
-                          <div class="main_title_border"></div>
-                          <img src="images/daiya.png" class="right_daiya" alt="daiya.png">
+                      <div class="main_title_daiya_block_itaru">
+                          <img src="images/daiya.png" class="left_daiya_itaru" alt="daiya.png">
+                          <div class="main_title_border_itaru"></div>
+                          <img src="images/daiya.png" class="right_daiya_itaru" alt="daiya.png">
                       </div>
 
                   </div>
