レスポンシブ調整中

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <main  class = "wrapper_itaru">
             <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
               <div class="carousel-inner">
-                <div class="carousel-item active" data-bs-interval="5000">
+                <div class="carousel-item active" data-bs-interval="50000">
                   <img src="images/top1.bmp" class="d-block w-100" alt="top1.bmp">
                     <div class="carousel-caption">
                       <div class="main_title_div_itaru">
@@ -54,7 +54,8 @@
                           <div class="main_title_border_itaru"></div>
                           <img src="images/daiya.png" class="right_daiya_itaru" alt="daiya.png">
                       </div>
-
+                      <p class="main_title_p3_itaru">鍋島武士×プログラミング</p>
+                      <p class="main_title_p4_itaru">同志よ、共に学ぶでござる</p>
                   </div>
                 </div>
                 <div class="carousel-item" data-bs-interval="5000">
