--- a/index.html
+++ b/index.html
@@ -3,6 +3,16 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <!--  OGP-->
+        <head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# website: http://ogp.me/ns/website#">
+        <meta property="og:url" content="https://hagakurepgm.net/">
+        <meta property="og:type" content="website">
+        <meta property="og:title" content="HAGAKURE_PROGRAMMING塾">
+        <meta property="og:description" content="佐賀でプログラミングを学ぶ人達のコミュニティ、HAGAKURE PROGRAMMING塾です。">
+        <meta property="og:site_name" content="HAGAKURE_PROGRAMMING">
+        <meta property="og:image" content="https://hagakurepgm.net/static/images/ogp.png">
+        <meta name="twitter:card" content="summary">
+        <meta name="twitter:image" content="https://hagakurepgm.net/static/images/ogp.png">
         <!-- Bootstrap CSS -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
         <link href="css/style.css" rel="stylesheet">
@@ -33,7 +43,7 @@
         <main  class = "wrapper_itaru">
             <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
               <div class="carousel-inner">
-                <div class="carousel-item active" data-bs-interval="50000">
+                <div class="carousel-item active" data-bs-interval="5000">
                   <img src="images/top1.bmp" class="d-block w-100" alt="top1.bmp">
                     <div class="carousel-caption">
                       <div class="main_title_div_itaru">
@@ -72,10 +82,8 @@
                 <div class="footer_border"></div>
                 <p><small>&copy;HAGAKURE PROGRAMMING塾 since2022</small></p>
                 <img class="footer_logo" src="images/footer_logo.png" alt="samurai_and_ninja">
-
             </div>
         </footer>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     </body>
-
 </html>
