--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 <html lang="ja">
     <head>
         <meta charset="UTF-8">
+        <meta name="description" content="佐賀のプログラミングコミュニティ。葉隠れプログラミングのWebページ">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
+        <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+        <script src="js/scroll_on.js"></script>
         <!--  OGP-->
         <head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# website: http://ogp.me/ns/website#">
         <meta property="og:url" content="https://hagakurepgm.net/">
@@ -77,6 +81,43 @@
               </div>
             </div>
         </main>
+        <!-- about_us ここから-->
+        <div class="about_us_morita">
+          <div class="container_morita scroll_up">
+            <div class="top_images_morita">
+              <div class="left_side_morita">
+                <div class="castle_morita">
+                  <img src="images/aboutus_castle.png" alt="お城">
+                </div>          
+              </div>
+              <div class="right_side_morita">
+                <div class="samurai_morita">
+                  <img src="images/aboutus_samurai.png" alt="お侍さん">            
+                </div>
+                <div class="tourou_morita">
+                  <img src="images/aboutus_tourou.png" alt="灯籠">          
+                </div>
+                <div class="bamboo_morita">
+                  <img src="images/aboutus_bamboo.png" alt="竹">        
+                </div>          
+              </div>
+            </div>
+            <div class="content_morita">
+              <div class="top_icon_morita">
+                <img src="images/aboutus_topicon.png" alt="お侍さん">
+              </div>
+              <h3 class="sub_title_morita">about us</h3> 
+              <div class="description_morita">
+                <p>佐賀県内でプログラミングを学ぶ人、活用したい人達によるコミュニティ、 HAGAKURE PROGRAMMING塾です。</p>
+                <p>
+                  プログラミングを学ぶもの同士のアウトプットが勉強する上での最高の励みになる。勉強していくなかで、Qiitaやstackoverflowなどの、「知見を共有しあう文化」に感激し、そういう輪を作っていきたい。「佐賀にIT人材を増やしたい」という理念を広げていきたい。県内のプログラミング好きと仲良くなりたい。
+              </p>
+                <p>このような理念のもと、プログラミングを学ぶ人、活用したい人達がつながりを持っていける場所として発足したコミュニティです。SlackとGithubを拠点として勉強会や情報共有等の活動を行っています。</p> 
+              </div>             
+            </div>
+          </div>
+        </div>    
+        <!--about_us ここまで-->
         <footer>
             <div class="wrapper_itaru footer">
                 <div class="footer_border"></div>
