--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
     <head>
         <meta charset="UTF-8">
-        <meta name="description" content="佐賀のプログラミングコミュニティ。葉隠れプログラミングのWebページ">
+        <meta name="description" content="佐賀のプログラミングコミュニティ。HAGAKURE PROGRAMMING塾のWebページ">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
         <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
