--- a/index.html
+++ b/index.html
@@ -118,6 +118,31 @@
           </div>
         </div>    
         <!--about_us ここまで-->
+        <!--hagakure ここから-->
+        <!-- <div id="particles-js"></div> -->
+        <div class="windy_contine_yhikaru">
+          <!-- <div id="particles-js"></div> -->
+          <div class="hagakure-containe_yhikaru">
+              <div class="hagakure_samurai_1_yhikaru">
+                  <img src="images/hagakure_samurai_1.png" alt="考え中のサムライ">
+              </div>
+              <section class="hagakure-explain_yhikaru">
+                  <div class="hagakure_topicon_yhikaru">
+                      <img src="images/hagakure_topicon.png" alt="葉っぱ">
+                  </div>
+                  <div class="hagakure-inner_yhikaru">
+                      <h3>hagakure</h3>
+                      <div class="hagakure-summary_yhikaru">
+                          <p>江戸時代に佐賀藩の藩士によって書かれた書物で、武士の精神や日頃の行いのあり方について説いています。今を生きるわたしたちにとっても「生きていくためのヒント」が詰まっており、佐賀で勉強する我々にも通じる部分があると考えこの名前にしました。</p>
+                      </div>
+                  </div>
+              </section>
+              <div class="hagakure_samurai_2_yhikaru">
+                  <img src="images/hagakure_samurai_2.png" alt="パソコン中のサムライ">
+              </div>
+          </div>
+        </div>
+        <!--hagakure ここまで-->
         <footer>
             <div class="wrapper_itaru footer">
                 <div class="footer_border"></div>
@@ -126,5 +151,7 @@
             </div>
         </footer>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+        <!-- <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+        <script src="js/window.js"></script> -->
     </body>
 </html>
