hagakureパートマージ、調整完了

--- a/index.html
+++ b/index.html
@@ -44,79 +44,83 @@
               </div>
             </nav>
         </header>
-        <main  class = "wrapper_itaru">
-            <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
-              <div class="carousel-inner">
-                <div class="carousel-item active" data-bs-interval="5000">
-                  <img src="images/top1.bmp" class="d-block w-100" alt="top1.bmp">
-                    <div class="carousel-caption">
-                      <div class="main_title_div_itaru">
-                        <h1 class="main_title_1_itaru">HAGAKURE</h1>
+        <section>
+            <main  class = "wrapper_itaru">
+                <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+                  <div class="carousel-inner">
+                    <div class="carousel-item active" data-bs-interval="7000">
+                      <img src="images/top1.bmp" class="d-block w-100" alt="top1.bmp">
+                        <div class="carousel-caption">
+                          <div class="main_title_div_itaru">
+                            <h1 class="main_title_1_itaru">HAGAKURE</h1>
+                          </div>
+                          <h2 class="main_title_2_itaru">プログラミング塾</h2>
+                          <div class="main_title_daiya_block_itaru">
+                              <img src="images/daiya.png" class="left_daiya_itaru" alt="daiya.png">
+                              <div class="main_title_border_itaru"></div>
+                              <img src="images/daiya.png" class="right_daiya_itaru" alt="daiya.png">
+                          </div>
+                          <div class="main_title_p_block_itaru">
+                              <p class="main_title_p1_itaru">鍋島武士×プログラミング</p>
+                              <p class="main_title_p2_itaru">同志よ、共に学ぶでござる</p>
+                          </div>
+                          <div class="main_title_daiya_block_itaru">
+                              <img src="images/daiya.png" class="left_daiya_itaru" alt="daiya.png">
+                              <div class="main_title_border_itaru"></div>
+                              <img src="images/daiya.png" class="right_daiya_itaru" alt="daiya.png">
+                          </div>
+                          <p class="main_title_p3_itaru">鍋島武士×プログラミング</p>
+                          <p class="main_title_p4_itaru">同志よ、共に学ぶでござる</p>
                       </div>
-                      <h2 class="main_title_2_itaru">プログラミング塾</h2>
-                      <div class="main_title_daiya_block_itaru">
-                          <img src="images/daiya.png" class="left_daiya_itaru" alt="daiya.png">
-                          <div class="main_title_border_itaru"></div>
-                          <img src="images/daiya.png" class="right_daiya_itaru" alt="daiya.png">
-                      </div>
-                      <div class="main_title_p_block_itaru">
-                          <p class="main_title_p1_itaru">鍋島武士×プログラミング</p>
-                          <p class="main_title_p2_itaru">同志よ、共に学ぶでござる</p>
-                      </div>
-                      <div class="main_title_daiya_block_itaru">
-                          <img src="images/daiya.png" class="left_daiya_itaru" alt="daiya.png">
-                          <div class="main_title_border_itaru"></div>
-                          <img src="images/daiya.png" class="right_daiya_itaru" alt="daiya.png">
-                      </div>
-                      <p class="main_title_p3_itaru">鍋島武士×プログラミング</p>
-                      <p class="main_title_p4_itaru">同志よ、共に学ぶでござる</p>
+                    </div>
+                    <div class="carousel-item" data-bs-interval="7000">
+                      <img src="images/top2.jpg" class="d-block w-100" alt="top2.jpg">
+                    </div>
+                    <div class="carousel-item" data-bs-interval="7000">
+                      <img src="images/kenshi.png" class="d-block w-100" alt="kenshi.png">
+                    </div>
                   </div>
                 </div>
-                <div class="carousel-item" data-bs-interval="5000">
-                  <img src="images/top2.jpg" class="d-block w-100" alt="top2.jpg">
-                </div>
-                <div class="carousel-item" data-bs-interval="5000">
-                  <img src="images/kenshi.png" class="d-block w-100" alt="kenshi.png">
-                </div>
-              </div>
-            </div>
-        </main>
+            </main>
+        </section>
         <!-- about_us ここから-->
-        <div class="about_us_morita">
-          <div class="container_morita scroll_up">
-            <div class="top_images_morita">
-              <div class="left_side_morita">
-                <div class="castle_morita">
-                  <img src="images/aboutus_castle.png" alt="お城">
-                </div>          
-              </div>
-              <div class="right_side_morita">
-                <div class="samurai_morita">
-                  <img src="images/aboutus_samurai.png" alt="お侍さん">            
+        <section>
+            <div class="about_us_morita">
+              <div class="container_morita scroll_up">
+                <div class="top_images_morita">
+                  <div class="left_side_morita">
+                    <div class="castle_morita">
+                      <img src="images/aboutus_castle.png" alt="お城">
+                    </div>
+                  </div>
+                  <div class="right_side_morita">
+                    <div class="samurai_morita">
+                      <img src="images/aboutus_samurai.png" alt="お侍さん">
+                    </div>
+                    <div class="tourou_morita">
+                      <img src="images/aboutus_tourou.png" alt="灯籠">
+                    </div>
+                    <div class="bamboo_morita">
+                      <img src="images/aboutus_bamboo.png" alt="竹">
+                    </div>
+                  </div>
                 </div>
-                <div class="tourou_morita">
-                  <img src="images/aboutus_tourou.png" alt="灯籠">          
+                <div class="content_morita">
+                  <div class="top_icon_morita">
+                    <img src="images/aboutus_topicon.png" alt="お侍さん">
+                  </div>
+                  <h3 class="sub_title_morita">about us</h3>
+                  <div class="description_morita">
+                    <p>佐賀県内でプログラミングを学ぶ人、活用したい人達によるコミュニティ、 HAGAKURE PROGRAMMING塾です。</p>
+                    <p>
+                      プログラミングを学ぶもの同士のアウトプットが勉強する上での最高の励みになる。勉強していくなかで、Qiitaやstackoverflowなどの、「知見を共有しあう文化」に感激し、そういう輪を作っていきたい。「佐賀にIT人材を増やしたい」という理念を広げていきたい。県内のプログラミング好きと仲良くなりたい。
+                  </p>
+                    <p>このような理念のもと、プログラミングを学ぶ人、活用したい人達がつながりを持っていける場所として発足したコミュニティです。SlackとGithubを拠点として勉強会や情報共有等の活動を行っています。</p>
+                  </div>
                 </div>
-                <div class="bamboo_morita">
-                  <img src="images/aboutus_bamboo.png" alt="竹">        
-                </div>          
               </div>
             </div>
-            <div class="content_morita">
-              <div class="top_icon_morita">
-                <img src="images/aboutus_topicon.png" alt="お侍さん">
-              </div>
-              <h3 class="sub_title_morita">about us</h3> 
-              <div class="description_morita">
-                <p>佐賀県内でプログラミングを学ぶ人、活用したい人達によるコミュニティ、 HAGAKURE PROGRAMMING塾です。</p>
-                <p>
-                  プログラミングを学ぶもの同士のアウトプットが勉強する上での最高の励みになる。勉強していくなかで、Qiitaやstackoverflowなどの、「知見を共有しあう文化」に感激し、そういう輪を作っていきたい。「佐賀にIT人材を増やしたい」という理念を広げていきたい。県内のプログラミング好きと仲良くなりたい。
-              </p>
-                <p>このような理念のもと、プログラミングを学ぶ人、活用したい人達がつながりを持っていける場所として発足したコミュニティです。SlackとGithubを拠点として勉強会や情報共有等の活動を行っています。</p> 
-              </div>             
-            </div>
-          </div>
-        </div>    
+        </section>
         <!--about_us ここまで-->
         <!--hagakure ここから-->
         <!-- <div id="particles-js"></div> -->
@@ -130,9 +134,9 @@
                     <div class="hagakure_topicon_yhikaru">
                       <img src="images/hagakure_topicon.png" alt="葉っぱ">
                     </div>
-                    <div class="hagakure-summary_yhikaru">
+                    <div class="hagakure-summary_yhikaru scroll_up">
                       <h1>hagakure</h1>
-                      <p>江戸時代に佐賀藩の藩士によって書かれた書物で、武士の精神や日頃の行いのあり方について説いています。今を生きるわたしたちにとっても「生きていくためのヒント」が詰まっており、佐賀で勉強する我々にも通じる部分があると考えこの名前にしました。</p>
+                      <p>江戸時代に佐賀藩の藩士によって書かれた書物で、武士の精神や日頃の行いのあり方について説いています。今を生きるわたしたちにとっても「生きていくためのヒント」が詰まっており、佐賀で勉強する我々にも通じる部分があると考えコミュニティ名にしました。</p>
                     </div>
                 </div>
                 <div class="hagakure_samurai_2_yhikaru">
