--- a/index_fumoto.html
+++ b/index_fumoto.html
@@ -1,36 +1,27 @@
-<!doctype html>
-<html lang="ja">
-    <head>
-         <meta charset="UTF-8">
-         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-         <meta name="description" content="hagakureプログラミングのsns公開">
-         <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
-         <link rel="stylesheet" href="css/style.css">
-    </head>
 
-    <body>
-      <div class=container_sns>
+    <section>
+      <div class="container_sns_fumoto">
 
-        <div class="item_left">
-          <img src="images\footer_clouds.png" class=cloud alt="雲">
-          <img src="images\footer_wood.png" class="forest" alt="木">
+        <div class="item_left_fumoto">
+          <img src="images\footer_clouds.png" class="cloud_fumoto" alt="雲">
+          <img src="images\footer_wood.png" class="forest_fumoto" alt="木">
 
         </div> <!-- /.item_right -->
 
-        <div class="background-image_makimono">
-          <div class="makimono_image">
-          <img src="images\makimono_topicon.png" class="makimono" alt="巻物">
+        <div class="background-image_makimono_fumoto">
+          <div class="makimono_image_fumoto">
+          <img src="images\makimono_topicon.png" class="makimono_fumoto" alt="巻物">
          </div>
-               <h1 class="snspart">makimono</h1>
+               <h1 class="sns_part_fumoto">makimono</h1>
                <section id="location">
                    <!-- <div class="sns_wrapper"> -->
-                        <div class="sns_box">
+                        <div class="sns_box_fumoto">
                               <h3 class="sub_title_sns"></h3>
-                               <iframe class="facebook_widefumoto" src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fprofile.php%3Fid%3D100085682160764&tabs=timeline&width=500&height=500&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId"
+                               <iframe class="facebook_widefumoto_fumoto" src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fprofile.php%3Fid%3D100085682160764&tabs=timeline&width=500&height=500&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId"
                                width="500" height="500" style="border:none;overflow:hidden" scrolling="no"
                                frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
 
-                              <iframe class="facebook_shinfumoto" src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fprofile.php%3Fid%3D100085682160764&tabs=timeline&width=320&height=500&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId"
+                              <iframe class="facebook_shinfumoto_fumoto" src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fprofile.php%3Fid%3D100085682160764&tabs=timeline&width=320&height=500&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId"
                               width="320" height="500" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true"
                               allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
 
@@ -40,11 +31,9 @@
                  </section><!-- /#location -->
          </div><!-- /.background_image_makimono -->
 
-        <div class="item_right">
-         <img src="images\footer_castle.png" class="castle" alt="お城">
+        <div class="item_right_fumoto">
+         <img src="images\footer_castle.png" class="castle_fumoto" alt="お城">
         </div><!-- /.item_left -->
 
      </div><!-- /.container_sns -->
-    </body>
-
-</html>
+    </section>
