最新のものをフェッチしたあと修正しています。確認よろしくお願いします。

--- a/index.html
+++ b/index.html
@@ -146,6 +146,46 @@
           </div>
         </section>
         <!--hagakure ここまで-->
+
+        <section>
+          <div class="container_sns_fumoto">
+
+            <div class="item_left_fumoto">
+              <img src="images\footer_clouds.png" class="cloud_fumoto" alt="雲">
+              <img src="images\footer_wood.png" class="forest_fumoto" alt="木">
+
+            </div> <!-- /.item_right -->
+
+            <div class="background-image_makimono_fumoto">
+              <div class="makimono_image_fumoto">
+              <img src="images\makimono_topicon.png" class="makimono_fumoto" alt="巻物">
+             </div>
+                   <h1 class="sns_part_fumoto">makimono</h1>
+                   <section id="location">
+                       <!-- <div class="sns_wrapper"> -->
+                            <div class="sns_box_fumoto">
+                                  <h3 class="sub_title_sns"></h3>
+                                   <iframe class="facebook_widefumoto_fumoto" src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fprofile.php%3Fid%3D100085682160764&tabs=timeline&width=500&height=500&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId"
+                                   width="500" height="500" style="border:none;overflow:hidden" scrolling="no"
+                                   frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
+
+                                  <iframe class="facebook_shinfumoto_fumoto" src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fprofile.php%3Fid%3D100085682160764&tabs=timeline&width=320&height=500&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId"
+                                  width="320" height="500" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true"
+                                  allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
+
+                            </div><!-- /.sns_box -->
+                       <!-- </div> -->
+                       <!-- /.sns_wrapper -->
+                     </section><!-- /#location -->
+             </div><!-- /.background_image_makimono -->
+
+            <div class="item_right_fumoto">
+             <img src="images\footer_castle.png" class="castle_fumoto" alt="お城">
+            </div><!-- /.item_left -->
+
+         </div><!-- /.container_sns -->
+        </section>
+
         <footer>
             <div class="wrapper_itaru footer">
                 <div class="footer_border"></div>
