--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                    <h1 class="sns_part_fumoto">makimono</h1>
                    <section id="location">
                        <!-- <div class="sns_wrapper"> -->
-                            <div class="sns_box_fumoto">
+                            <div class="sns_box_fumoto scroll_up">
                                   <h3 class="sub_title_sns"></h3>
                                    <iframe class="facebook_widefumoto_fumoto" src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fprofile.php%3Fid%3D100085682160764&tabs=timeline&width=500&height=500&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId"
                                    width="500" height="500" style="border:none;overflow:hidden" scrolling="no"
