--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <div class="nav-right_itaru">
                      <ul class="list-group list-group-horizontal">
                         <a href="#"><img class="fb_logo_itaru" src="images/facebook_icon.png" alt="facebook"></a>
-                        <div class="contact_text_itaru DivLink_itaru" >お問い合わせ
+                        <div class="contact_text_itaru DivLink_itaru" >参加する
                         <a class ="Link_itaru" href="#"></a></div>
                     </ul>
                   </div>
@@ -146,46 +146,36 @@
           </div>
         </section>
         <!--hagakure ここまで-->
-
         <section>
           <div class="container_sns_fumoto">
-
             <div class="item_left_fumoto">
               <img src="images\footer_clouds.png" class="cloud_fumoto" alt="雲">
               <img src="images\footer_wood.png" class="forest_fumoto" alt="木">
-
             </div> <!-- /.item_right -->
-
             <div class="background-image_makimono_fumoto">
               <div class="makimono_image_fumoto">
               <img src="images\makimono_topicon.png" class="makimono_fumoto" alt="巻物">
              </div>
                    <h1 class="sns_part_fumoto">makimono</h1>
                    <section id="location">
-                       <!-- <div class="sns_wrapper"> -->
-                            <div class="sns_box_fumoto scroll_up">
-                                  <h3 class="sub_title_sns"></h3>
-                                   <iframe class="facebook_widefumoto_fumoto" src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fprofile.php%3Fid%3D100085682160764&tabs=timeline&width=500&height=500&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId"
-                                   width="500" height="500" style="border:none;overflow:hidden" scrolling="no"
-                                   frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
+                        <div class="sns_box_fumoto scroll_up">
+                              <h3 class="sub_title_sns"></h3>
+                               <iframe class="facebook_widefumoto_fumoto" src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fprofile.php%3Fid%3D100085682160764&tabs=timeline&width=500&height=500&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId"
+                               width="500" height="500" style="border:none;overflow:hidden" scrolling="no"
+                               frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
 
-                                  <iframe class="facebook_shinfumoto_fumoto" src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fprofile.php%3Fid%3D100085682160764&tabs=timeline&width=320&height=500&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId"
-                                  width="320" height="500" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true"
-                                  allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
+                              <iframe class="facebook_shinfumoto_fumoto" src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fprofile.php%3Fid%3D100085682160764&tabs=timeline&width=320&height=500&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId"
+                              width="320" height="500" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true"
+                              allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
 
-                            </div><!-- /.sns_box -->
-                       <!-- </div> -->
-                       <!-- /.sns_wrapper -->
-                     </section><!-- /#location -->
-             </div><!-- /.background_image_makimono -->
-
+                        </div>
+                   </section>
+             </div>
             <div class="item_right_fumoto">
              <img src="images\footer_castle.png" class="castle_fumoto" alt="お城">
             </div><!-- /.item_left -->
-
          </div><!-- /.container_sns -->
         </section>
-
         <footer>
             <div class="wrapper_itaru footer">
                 <div class="footer_border"></div>
