--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
         <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-        <script src="js/scroll_on.js"></script>
+        <script src="static/scroll_on.js"></script>
         <!--  OGP-->
         <head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# website: http://ogp.me/ns/website#">
         <meta property="og:url" content="https://hagakurepgm.net/">
@@ -19,26 +19,26 @@
         <meta name="twitter:image" content="https://hagakurepgm.net/static/images/ogp.png">
         <!-- Bootstrap CSS -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-        <link href="css/style.css" rel="stylesheet">
+        <link href="static/style.css" rel="stylesheet">
         <link href="https://fonts.googleapis.com/earlyaccess/hannari.css" rel="stylesheet">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Zen+Maru+Gothic:wght@300;400&display=swap" rel="stylesheet">
-        <link rel="icon" href="images/favicon.ico">
+        <link rel="icon" href="static/images/favicon.ico">
         <title>HAGAKURE PROGRAMMING塾のWebサイトです</title>
     </head>
     <body>
         <header class="wrapper_itaru">
             <nav class="navbar navbar-expand navbar-light bg-light">
               <div class="container-fluid navbar_back_itaru">
-                <a class="navbar-brand" href="#"><img class="logo_itaru" src="images/logo.png" alt="logo"></a>
+                <a class="navbar-brand" href="#"><img class="logo_itaru" src="static/images/logo.png" alt="logo"></a>
                     <div class="nav-right_itaru">
                      <ul class="list-group list-group-horizontal">
-                        <a href="#"><img class="fb_logo_itaru" src="images/facebook_icon.png" alt="facebook"></a>
+                        <a href="https://www.facebook.com/102157125979726"><img class="fb_logo_itaru" src="static/images/facebook_icon.png" alt="facebook"></a>
                         <div class="contact_text_itaru DivLink_itaru" >参加する
-                        <a class ="Link_itaru" href="#"></a></div>
+                        <a class ="Link_itaru" href="https://forms.gle/N8ipEt2RFSs8bt4a9"></a></div>
                     </ul>
                   </div>
               </div>
@@ -49,35 +49,35 @@
                 <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
                   <div class="carousel-inner">
                     <div class="carousel-item active" data-bs-interval="7000">
-                      <img src="images/top1.bmp" class="d-block w-100" alt="top1.bmp">
+                      <img src="static/images/top1.bmp" class="d-block w-100" alt="top1.jpg">
                         <div class="carousel-caption">
                           <div class="main_title_div_itaru">
                             <h1 class="main_title_1_itaru">HAGAKURE</h1>
                           </div>
                           <h2 class="main_title_2_itaru">プログラミング塾</h2>
                           <div class="main_title_daiya_block_itaru">
-                              <img src="images/daiya.png" class="left_daiya_itaru" alt="daiya.png">
+                              <img src="static/images/daiya.png" class="left_daiya_itaru" alt="daiya.png">
                               <div class="main_title_border_itaru"></div>
-                              <img src="images/daiya.png" class="right_daiya_itaru" alt="daiya.png">
+                              <img src="static/images/daiya.png" class="right_daiya_itaru" alt="daiya.png">
                           </div>
                           <div class="main_title_p_block_itaru">
                               <p class="main_title_p1_itaru">鍋島武士×プログラミング</p>
                               <p class="main_title_p2_itaru">同志よ、共に学ぶでござる</p>
                           </div>
                           <div class="main_title_daiya_block_itaru">
-                              <img src="images/daiya.png" class="left_daiya_itaru" alt="daiya.png">
+                              <img src="static/images/daiya.png" class="left_daiya_itaru" alt="daiya.png">
                               <div class="main_title_border_itaru"></div>
-                              <img src="images/daiya.png" class="right_daiya_itaru" alt="daiya.png">
+                              <img src="static/images/daiya.png" class="right_daiya_itaru" alt="daiya.png">
                           </div>
                           <p class="main_title_p3_itaru">鍋島武士×プログラミング</p>
                           <p class="main_title_p4_itaru">同志よ、共に学ぶでござる</p>
                       </div>
                     </div>
                     <div class="carousel-item" data-bs-interval="7000">
-                      <img src="images/top2.jpg" class="d-block w-100" alt="top2.jpg">
+                      <img src="static/images/top2.jpg" class="d-block w-100" alt="top2.jpg">
                     </div>
                     <div class="carousel-item" data-bs-interval="7000">
-                      <img src="images/kenshi.png" class="d-block w-100" alt="kenshi.png">
+                      <img src="static/images/kenshi.png" class="d-block w-100" alt="kenshi.png">
                     </div>
                   </div>
                 </div>
@@ -90,24 +90,24 @@
                 <div class="top_images_morita">
                   <div class="left_side_morita">
                     <div class="castle_morita">
-                      <img src="images/aboutus_castle.png" alt="お城">
+                      <img src="static/images/aboutus_castle.png" alt="お城">
                     </div>
                   </div>
                   <div class="right_side_morita">
                     <div class="samurai_morita">
-                      <img src="images/aboutus_samurai.png" alt="お侍さん">
+                      <img src="static/images/aboutus_samurai.png" alt="お侍さん">
                     </div>
                     <div class="tourou_morita">
-                      <img src="images/aboutus_tourou.png" alt="灯籠">
+                      <img src="static/images/aboutus_tourou.png" alt="灯籠">
                     </div>
                     <div class="bamboo_morita">
-                      <img src="images/aboutus_bamboo.png" alt="竹">
+                      <img src="static/images/aboutus_bamboo.png" alt="竹">
                     </div>
                   </div>
                 </div>
                 <div class="content_morita">
                   <div class="top_icon_morita">
-                    <img src="images/aboutus_topicon.png" alt="お侍さん">
+                    <img src="static/images/aboutus_topicon.png" alt="お侍さん">
                   </div>
                   <h3 class="sub_title_morita">about us</h3>
                   <div class="description_morita">
@@ -128,11 +128,11 @@
           <div class="windy_contine_yhikaru">
             <div class="hagakure-containe_yhikaru">
                 <div class="hagakure_samurai_1_yhikaru">
-                    <img src="images/hagakure_samurai_1.png" alt="考え中のサムライ">
+                    <img src="static/images/hagakure_samurai_1.png" alt="考え中のサムライ">
                 </div>
                 <div class="hagakure-inner_yhikaru">
                     <div class="hagakure_topicon_yhikaru">
-                      <img src="images/hagakure_topicon.png" alt="葉っぱ">
+                      <img src="static/images/hagakure_topicon.png" alt="葉っぱ">
                     </div>
                     <div class="hagakure-summary_yhikaru scroll_up">
                       <h1>hagakure</h1>
@@ -140,7 +140,7 @@
                     </div>
                 </div>
                 <div class="hagakure_samurai_2_yhikaru">
-                    <img src="images/hagakure_samurai_2.png" alt="パソコン中のサムライ">
+                    <img src="static/images/hagakure_samurai_2.png" alt="パソコン中のサムライ">
                 </div>
             </div>
           </div>
@@ -149,16 +149,17 @@
         <section>
           <div class="container_sns_fumoto">
             <div class="item_left_fumoto">
-              <img src="images\footer_clouds.png" class="cloud_fumoto" alt="雲">
-              <img src="images\footer_wood.png" class="forest_fumoto" alt="木">
+              <img src="static/images\footer_clouds.png" class="cloud_fumoto" alt="雲">
+              <img src="static/images\footer_wood.png" class="forest_fumoto" alt="木">
             </div> <!-- /.item_right -->
             <div class="background-image_makimono_fumoto">
               <div class="makimono_image_fumoto">
-              <img src="images\makimono_topicon.png" class="makimono_fumoto" alt="巻物">
+              <img src="static/images\makimono_topicon.png" class="makimono_fumoto" alt="巻物">
              </div>
+                <div class="  scroll_up">
                    <h1 class="sns_part_fumoto">makimono</h1>
                    <section id="location">
-                        <div class="sns_box_fumoto scroll_up">
+                        <div class="sns_box_fumoto">
                               <h3 class="sub_title_sns"></h3>
                                <iframe class="facebook_widefumoto_fumoto" src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fprofile.php%3Fid%3D100085682160764&tabs=timeline&width=500&height=500&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId"
                                width="500" height="500" style="border:none;overflow:hidden" scrolling="no"
@@ -170,9 +171,10 @@
 
                         </div>
                    </section>
+                </div>
              </div>
             <div class="item_right_fumoto">
-             <img src="images\footer_castle.png" class="castle_fumoto" alt="お城">
+             <img src="static/images\footer_castle.png" class="castle_fumoto" alt="お城">
             </div><!-- /.item_left -->
          </div><!-- /.container_sns -->
         </section>
@@ -180,7 +182,7 @@
             <div class="wrapper_itaru footer">
                 <div class="footer_border"></div>
                 <p><small>&copy;HAGAKURE PROGRAMMING塾 since2022</small></p>
-                <img class="footer_logo" src="images/footer_logo.png" alt="samurai_and_ninja">
+                <img class="footer_logo" src="static/images/footer_logo.png" alt="samurai_and_ninja">
             </div>
         </footer>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
