--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <header class="wrapper_itaru">
             <nav class="navbar navbar-expand navbar-light bg-light">
               <div class="container-fluid navbar_back_itaru">
-                <a class="navbar-brand" href="#"><img class="logo_itaru" src="static/images/logo.png" alt="logo"></a>
+                <a class="navbar-brand" href="https://hagakurepgm.net/"><img class="logo_itaru" src="static/images/logo.png" alt="logo"></a>
                     <div class="nav-right_itaru">
                      <ul class="list-group list-group-horizontal">
                         <a href="https://www.facebook.com/102157125979726"><img class="fb_logo_itaru" src="static/images/facebook_icon.png" alt="facebook"></a>
@@ -49,7 +49,7 @@
                 <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
                   <div class="carousel-inner">
                     <div class="carousel-item active" data-bs-interval="7000">
-                      <img src="static/images/top1.bmp" class="d-block w-100" alt="top1.jpg">
+                      <img src="static/images/top1.jpg" class="d-block w-100" alt="top1.jpg">
                         <div class="carousel-caption">
                           <div class="main_title_div_itaru">
                             <h1 class="main_title_1_itaru">HAGAKURE</h1>
@@ -84,7 +84,7 @@
             </main>
         </section>
         <!-- about_us ここから-->
-        <section>
+        <section class="wrapper_itaru">
             <div class="about_us_morita">
               <div class="container_morita scroll_up">
                 <div class="top_images_morita">
@@ -109,7 +109,7 @@
                   <div class="top_icon_morita">
                     <img src="static/images/aboutus_topicon.png" alt="お侍さん">
                   </div>
-                  <h3 class="sub_title_morita">about us</h3>
+                  <h1 class="sub_title_morita">about us</h1>
                   <div class="description_morita">
                     <p>佐賀県内でプログラミングを学ぶ人、活用したい人達によるコミュニティ、 HAGAKURE PROGRAMMING塾です。</p>
                     <p>
@@ -124,7 +124,7 @@
         <!--about_us ここまで-->
         <!--hagakure ここから-->
         <!-- <div id="particles-js"></div> -->
-        <section class="hagakure-explain_yhikaru">
+        <section class="hagakure-explain_yhikaru wrapper_itaru">
           <div class="windy_contine_yhikaru">
             <div class="hagakure-containe_yhikaru">
                 <div class="hagakure_samurai_1_yhikaru">
@@ -146,7 +146,27 @@
           </div>
         </section>
         <!--hagakure ここまで-->
-        <section>
+        <!-- dojo ここから-->
+        <section class="wrapper_itaru">
+            <div class="dojo">
+              <div class="container_dojo scroll_up">
+                <div class="content_dojo">
+                  <div class="top_icon_dojo">
+                    <img src="static/images/dojo_topicon.png" alt="忍者">
+                  </div>
+                  <h1 class="sub_title_dojo">dojo</h1>
+                  <div class="description_dojo">
+                    <p>コミュニティでは、佐賀県産業スマート化センターの支援を受け、オンラインで自主学習や勉強会が出来るメタバースを設置しております。<br>雑談利用や一人で集中して勉強したいときなど、使い方は様々。参加者はいつでも利用することが可能となっています。<br>使用ツール：オンラインイベントツール「oVice」</p>
+                  </div>
+                  <div class="dojo_image">
+                      <img class="oVice_image"src="static/images/dojo_image.png" alt="oViceのサンプル写真">
+                  </div>
+                </div>
+              </div>
+            </div>
+        </section>
+        <!--dojo ここまで-->
+        <section class="wrapper_itaru">
           <div class="container_sns_fumoto">
             <div class="item_left_fumoto">
               <img src="static/images\footer_clouds.png" class="cloud_fumoto" alt="雲">
