--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
         <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
         <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
         <script src="static/scroll_on.js"></script>
+        <div id="fb-root"></div>
+        <script async defer crossorigin="anonymous" src="https://connect.facebook.net/ja_JP/sdk.js#xfbml=1&version=v15.0"　nonce="udzJmh8R"></script>
         <!--  OGP-->
         <head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# website: http://ogp.me/ns/website#">
         <meta property="og:url" content="https://hagakurepgm.net/">
@@ -181,14 +183,8 @@
                    <section id="location">
                         <div class="sns_box_fumoto">
                               <h3 class="sub_title_sns"></h3>
-                               <iframe class="facebook_widefumoto_fumoto" src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fprofile.php%3Fid%3D100085682160764&tabs=timeline&width=500&height=500&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId"
-                               width="500" height="500" style="border:none;overflow:hidden" scrolling="no"
-                               frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
-
-                              <iframe class="facebook_shinfumoto_fumoto" src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fprofile.php%3Fid%3D100085682160764&tabs=timeline&width=320&height=500&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId"
-                              width="320" height="500" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true"
-                              allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
-
+                              <div class="fb-page facebook_widefumoto_fumoto" data-href="https://www.facebook.com/profile.php?id=100085682160764" data-show-posts="true" data-width="500" data-height="500" data-small-header="false" data-adapt-container-width="false" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/profile.php?id=100085682160764" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/profile.php?id=100085682160764">Hagakure Programming塾</a></blockquote></div>
+                            <div class="fb-page facebook_shinfumoto_fumoto" data-href="https://www.facebook.com/profile.php?id=100085682160764" data-show-posts="true" data-width="320" data-height="500" data-small-header="false" data-adapt-container-width="false" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/profile.php?id=100085682160764" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/profile.php?id=100085682160764">Hagakure Programming塾</a></blockquote></div>
                         </div>
                    </section>
                 </div>
