--- a/index.html
+++ b/index.html
@@ -168,32 +168,34 @@
             </div>
         </section>
         <!--dojo ここまで-->
+        <!--SNS ここから-->
         <section class="wrapper_itaru">
-          <div class="container_sns_fumoto">
-            <div class="item_left_fumoto">
-              <img src="static/images\footer_clouds.png" class="cloud_fumoto" alt="雲">
-              <img src="static/images\footer_wood.png" class="forest_fumoto" alt="木">
-            </div> <!-- /.item_right -->
-            <div class="background-image_makimono_fumoto">
-              <div class="makimono_image_fumoto">
-              <img src="static/images\makimono_topicon.png" class="makimono_fumoto" alt="巻物">
-             </div>
-                <div class="  scroll_up">
-                   <h1 class="sns_part_fumoto">makimono</h1>
-                   <section id="location">
-                        <div class="sns_box_fumoto">
-                              <h3 class="sub_title_sns"></h3>
-                              <div class="fb-page facebook_widefumoto_fumoto" data-href="https://www.facebook.com/profile.php?id=100085682160764" data-show-posts="true" data-width="500" data-height="500" data-small-header="false" data-adapt-container-width="false" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/profile.php?id=100085682160764" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/profile.php?id=100085682160764">Hagakure Programming塾</a></blockquote></div>
-                            <div class="fb-page facebook_shinfumoto_fumoto" data-href="https://www.facebook.com/profile.php?id=100085682160764" data-show-posts="true" data-width="320" data-height="500" data-small-header="false" data-adapt-container-width="false" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/profile.php?id=100085682160764" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/profile.php?id=100085682160764">Hagakure Programming塾</a></blockquote></div>
+            <div class="container_sns_fumoto">
+                <div class="item_left_fumoto">
+                    <img src="static/images\footer_clouds.png" class="cloud_fumoto" alt="雲">
+                    <img src="static/images\footer_wood.png" class="forest_fumoto" alt="木">
+                </div> <!-- /.item_right -->
+                <div class="background-image_makimono_fumoto">
+                    <div class="makimono_image_fumoto">
+                        <img src="static/images\makimono_topicon.png" class="makimono_fumoto" alt="巻物">
+                    </div>
+                    <div class="scroll_up">
+                        <h1 class="sns_part_fumoto">makimono</h1>
+                        <div id="location">
+                            <div class="sns_box_fumoto">
+                                <h3 class="sub_title_sns"></h3>
+                                <div class="fb-page facebook_widefumoto_fumoto" data-href="https://www.facebook.com/profile.php?id=100085682160764" data-show-posts="true" data-width="500" data-height="500" data-small-header="false" data-adapt-container-width="false" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/profile.php?id=100085682160764" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/profile.php?id=100085682160764">Hagakure Programming塾</a></blockquote></div>
+                                <div class="fb-page facebook_shinfumoto_fumoto" data-href="https://www.facebook.com/profile.php?id=100085682160764" data-show-posts="true" data-width="320" data-height="500" data-small-header="false" data-adapt-container-width="false" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/profile.php?id=100085682160764" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/profile.php?id=100085682160764">Hagakure Programming塾</a></blockquote></div>
+                            </div>
                         </div>
-                   </section>
+                    </div>
                 </div>
-             </div>
-            <div class="item_right_fumoto">
-             <img src="static/images\footer_castle.png" class="castle_fumoto" alt="お城">
-            </div><!-- /.item_left -->
-         </div><!-- /.container_sns -->
+                <div class="item_right_fumoto">
+                    <img src="static/images\footer_castle.png" class="castle_fumoto" alt="お城">
+                </div><!-- /.item_left -->
+            </div><!-- /.container_sns -->
         </section>
+        <!--SNS ここまで-->
         <footer>
             <div class="wrapper_itaru footer">
                 <div class="footer_border"></div>
