--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Zen+Maru+Gothic:wght@300;400&display=swap" rel="stylesheet">
         <link rel="icon" href="static/images/favicon.ico">
-        <title>HAGAKURE PROGRAMMING塾のWebサイトです</title>
+        <title>HAGAKUREプログラミング塾</title>
     </head>
     <body>
         <header class="wrapper_itaru">
