修正第一弾

--- a/index.html
+++ b/index.html
@@ -148,6 +148,8 @@
           </div>
         </section>
         <!--hagakure ここまで-->
+        <!--dojoとmakimonoのグループ ここから-->
+        <div class="dojo_makimono_group">
         <!-- dojo ここから-->
         <section class="wrapper_itaru">
             <div class="dojo">
@@ -196,6 +198,8 @@
             </div><!-- /.container_sns -->
         </section>
         <!--SNS ここまで-->
+        </div>
+        <!--dojo_makimonoのグループここまで-->
         <footer>
             <div class="wrapper_itaru footer">
                 <div class="footer_border"></div>
