wrapperの適用、facebook下の余白追加

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
         </section>
         <!--hagakure ここまで-->
         <!--dojoとmakimonoのグループ ここから-->
-        <div class="dojo_makimono_group">
+        <div class="dojo_makimono_group wrapper_itaru">
         <!-- dojo ここから-->
         <section class="wrapper_itaru">
             <div class="dojo">
