トップ絵更新。

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active" data-bs-interval="7000">
-            <img src="static/images/top1.jpg" class="d-block w-100" alt="top1.jpg">
+            <img src="static/images/top1.jpg" class="d-block w-100 top1_image" alt="top1.jpg">
             <div class="carousel-caption">
               <div class="main_title_div">
                 <h1 class="main_title_1">HAGAKURE</h1>
