スマホ用トップ画像変更

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     </nav>
   </header>
   <section>
-    <main class="wrapper_hp">
+    <main class="wrapper_hp main_visual">
       <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active" data-bs-interval="7000">
@@ -100,6 +100,10 @@
         </div>
       </div>
     </main>
+    <main class="wrapper_hp main_visual_smartphone">
+        <img src="static/images/kenshi_smartphone.jpg" class="w-100" alt="kenshi.jpg">
+    </main>
+
   </section>
   <!-- about_us ここから-->
   <section class="wrapper_hp">
