スマホデザインに「塾」の文字追加

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             <img src="static/images/top2.jpg" class="d-block w-100" alt="top2.jpg">
           </div>
           <div class="carousel-item" data-bs-interval="7000">
-            <img src="static/images/kenshi.png" class="d-block w-100" alt="kenshi.png">
+            <img src="static/images/kenshi.jpg" class="d-block w-100" alt="kenshi.jpg">
           </div>
         </div>
       </div>
