--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
   <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
   <script src="static/scroll_on.js"></script>
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.7.1/css/lightbox.css" rel="stylesheet">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.7.1/js/lightbox.min.js"
+            type="text/javascript"></script>
   <div id="fb-root"></div>
   <script async defer crossorigin="anonymous" src="https://connect.facebook.net/ja_JP/sdk.js#xfbml=1&version=v15.0"
     nonce="udzJmh8R"></script>
@@ -187,7 +191,7 @@
               </p>
             </div>
             <div class="dojo_image">
-              <img class="oVice_image" src="static/images/dojo_image.png" alt="oViceのサンプル写真">
+              <a href="static/images/ovice_img_big.png" data-lightbox="group"><img class="oVice_image" src="static/images/dojo_image.png" alt="oViceのサンプル写真"></a>
             </div>
           </div>
         </div>
