dojoの内容変更

--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
   <meta charset="UTF-8">
   <meta name="description" content="佐賀のプログラミングコミュニティ。HAGAKURE PROGRAMMING塾のWebページ">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-PQMQ82P18K"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-    gtag('config', 'G-PQMQ82P18K');
-  </script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-PQMQ82P18K"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'G-PQMQ82P18K');
+</script>
   <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
   <script src="static/scroll_on.js"></script>
@@ -66,7 +66,7 @@
       </div>
     </nav>
   </header>
-  <section>
+<section>
     <main class="wrapper_hp main_visual">
       <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
@@ -107,7 +107,6 @@
     <main class="wrapper_hp main_visual_smartphone">
         <img src="static/images/kenshi_smartphone.jpg" class="w-100" alt="kenshi.jpg">
     </main>
-
   </section>
   <!-- about_us ここから-->
   <section class="wrapper_hp">
@@ -142,6 +141,7 @@
               プログラミングを学ぶもの同士のアウトプットが勉強する上での最高の励みになる。勉強していくなかで、Qiitaやstackoverflowなどの、「知見を共有しあう文化」に感激し、そういう輪を作っていきたい。「佐賀にIT人材を増やしたい」という理念を広げていきたい。県内のプログラミング好きと仲良くなりたい。
             </p>
             <p>このような理念のもと、プログラミングを学ぶ人、活用したい人達がつながりを持っていける場所として発足したコミュニティです。SlackとGithubを拠点として勉強会や情報共有等の活動を行っています。</p>
+            <p>興味のある方、お気軽に<a href="https://docs.google.com/forms/d/e/1FAIpQLSc9WH1hvDtyB_pghy8NNrrLCVeGONm7o8ET2PF70KPZTel_jQ/alreadyresponded">参加フォーム</a>よりお問い合わせください。</p>
           </div>
         </div>
       </div>
@@ -187,11 +187,14 @@
             <h1 class="sub_title_dojo">dojo</h1>
             <div class="description_dojo">
               <p>
-                コミュニティでは、佐賀県産業スマート化センターの支援を受け、オンラインで自主学習や勉強会が出来るメタバースを設置しております。<br>雑談利用や一人で集中して勉強したいときなど、使い方は様々。参加者はいつでも利用することが可能となっています。<br>使用ツール：オンラインイベントツール「oVice」
+                サポート企業である<strong>株式会社ocomoji様</strong>より支援いただき、ZOOMの有償アカウントを購入させていただいております。<br>
+                塾生が利用できる自習室の開設や、オンラインでの勉強会、ライトニングトーク会に利用しています。<br>
+                ※画像は第３回ライトニングトーク会の模様です。<br>
+                スポンサー企業：<a href="https://ocomoji.co.jp/">株式会社ocomoji</a>様
               </p>
             </div>
             <div class="dojo_image">
-              <a href="static/images/ovice_img_big.png" data-lightbox="group"><img class="oVice_image" src="static/images/dojo_image.png" alt="oViceのサンプル写真"></a>
+              <img class="oVice_image" src="static/images/lightning_talk.jpg" alt="ライトニングトーク会の様子">
             </div>
           </div>
         </div>
